Update links in navbar

--- a/217-website/FAQ/index.html
+++ b/217-website/FAQ/index.html
@@ -31,10 +31,10 @@
 							<ul class = "nav navbar-nav">
 								<li><a href = "../index.html">Home</a></li>
 								<li class="active"><a href="#">FAQ</a></li>
-								<li><a href = "#">Calendar</a></li>
-								<li><a href = "#">Syllabus</a></li>
-								<li><a href = "#">Content</a></li>
-								<li><a href = "#">People</a></li>
+								<li><a href = "../Calendar/index.html">Calendar</a></li>
+								<li><a href = "../Syllabus/index.html">Syllabus</a></li>
+								<li><a href = "../Content/index.html">Content</a></li>
+								<li><a href = "../People/index.html">People</a></li>
 							</ul>
 						</div>
 					</div>
@@ -68,7 +68,7 @@
 				<h2 id="late-homeworks">Will late homeworks be allowed?</h2>
 				<p>Yes!  I want you to do your homeworks even if you are not able to complete them by the assigned date.</p>
 				<p>Late homeworks will be accepted up to five class days after the original due date.  <strong>However, 10% of the points will be lost for each day the homework is late.</strong></p>
-				<p>For example, if a homework worth 10 points is do on a Wednesday but you do not turn it in until Friday, one point will be deducted for being late.  If you do not turn it in until the following Monday, two points will be deducted for tardiness.  Three points will be deducted if it's turned in on the next Wednesday, four points on Friday, then five points on Monday.  The homework will not be accepted after that.</p>
+				<p>For example, if a homework worth 10 points is due on a Wednesday but you do not turn it in until Friday, one point will be deducted for being late.  If you do not turn it in until the following Monday, two points will be deducted for tardiness.  Three points will be deducted if it's turned in on the next Wednesday, four points on Friday, then five points on Monday.  The homework will not be accepted after that.</p>
 				<hr>
 
 				<h2 id="grading-scale">What is the grading scale?</h2>
