--- a/217-website/Calendar/index.html
+++ b/217-website/Calendar/index.html
@@ -47,13 +47,13 @@
 						        <span class="icon-bar"></span>
 						        <span class="icon-bar"></span>
 						    </button>
-				      		<a class="navbar-brand" href="#">Stat 217</a>
+				      		<a class="navbar-brand" href="../index.html">Stat 217</a>
 				   		</div>
 				   		<!-- LINKS -->
 						<div class = "collapse navbar-collapse" id = "collapse" role = "navigation">
 							<ul class = "nav navbar-nav">
-								<li class="active"><a href = "../index.html">Home</a></li>
-								<li><a href = "../FAQ/index.html">FAQ</a></li>
+								<li><a href = "../index.html">Home</a></li>
+								<li class="active"><a href="../FAQ/index.html">FAQ</a></li>
 								<li><a href = "#">Calendar</a></li>
 								<li><a href = "../Syllabus/index.html">Syllabus</a></li>
 								<li><a href = "../Content/index.html">Content</a></li>
@@ -63,7 +63,7 @@
 					</div>
 				</nav>
 			</div>
-		</header>
+		</header>  <!-- close navbar -->
 
 		<!-- BODY -->
 		<div class = "row">
