Fix navbars, make footers text-muted, beginning working on images for People page

--- a/217-website/FAQ/index.html
+++ b/217-website/FAQ/index.html
@@ -31,10 +31,10 @@
 							<ul class = "nav navbar-nav">
 								<li><a href = "../index.html">Home</a></li>
 								<li class="active"><a href="#">FAQ</a></li>
-								<li><a href = "#">Calendar</a></li>
-								<li><a href = "#">Syllabus</a></li>
-								<li><a href = "#">Content</a></li>
-								<li><a href = "#">People</a></li>
+								<li><a href = "../Calendar/index.html">Calendar</a></li>
+								<li><a href = "../Syllabus/index.html">Syllabus</a></li>
+								<li><a href = "../Content/index.html">Content</a></li>
+								<li><a href = "../People/index.html">People</a></li>
 							</ul>
 						</div>
 					</div>
@@ -47,6 +47,7 @@
 			<div class = "col-lg-12 col-sm-12" id = "questions">
 				<h1>FAQ</h1>
 				<ul>
+					<li><a href="#use-D2L">Will D2L be used for this course?</a></li>
 					<li><a href="#need-computer">Do I need a computer?</a></li>
 					<li><a href="#install-R">How do I install R and RStudio?</a></li>
 					<li><a href="#late-homeworks">Will lake homeworks be allowed?</a></li>
@@ -56,6 +57,8 @@
 			<hr>
 
 			<div class="col-lg-12 col-sm-12" id="answers">
+				<h2 id="use-D2L">Will D2L be used for this course?</h2>
+				<p>D2L will be used for grades only.  All content and scheduling announcements will be posted on this site.</p>
 				<h2 id="need-computer">Do I need a computer?</h2>
 				<p>A computer is not required, but it will be helpful to complete homeworks.</p>
 				<p>If you do not have a computer, you will need to use a computer in either the Roberts Hall computer lab (ROBH 101) or the Reid Hall computer lab (REID 306).  These computers can be used by students and come with R installed.</p>
@@ -72,16 +75,21 @@
 				<hr>
 
 				<h2 id="grading-scale">What is the grading scale?</h2>
-				<ul>
-					<li><i>A</i> 93-100</li>
-					<li><i>A-</i> 90-92</li>
-				</ul>
 
 			</div> <!-- close answers -->
 		</div> 
+
+		<!-- Footer -->
+		<footer id="top" role="footer">
+			<div class="container">
+				<p class="text-muted">Styled using <a href="http://getbootstrap.com/">Bootstrap</a>.  Hosted on <a href="https://github.com/">GitHub</a>.</p>
+			</div>
+		</footer>
+
 	</div> <!-- close container -->
 
 	<!-- javascript -->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script> <!-- load jquery for navbar -->
     <script src="../js/bootstrap.min.js"></script>
 </body>
 </html>
