--- a/217-website/Calendar/index.html
+++ b/217-website/Calendar/index.html
@@ -52,9 +52,9 @@
 				   		<!-- LINKS -->
 						<div class = "collapse navbar-collapse" id = "collapse" role = "navigation">
 							<ul class = "nav navbar-nav">
-								<li class="active"><a href = "../index.html">Home</a></li>
+								<li><a href = "../index.html">Home</a></li>
 								<li><a href = "../FAQ/index.html">FAQ</a></li>
-								<li><a href = "#">Calendar</a></li>
+								<li class="active"><a href = "#">Calendar</a></li>
 								<li><a href = "../Syllabus/index.html">Syllabus</a></li>
 								<li><a href = "../Content/index.html">Content</a></li>
 								<li><a href = "../People/index.html">People</a></li>
@@ -84,12 +84,12 @@
 		<!-- Footer -->
 		<footer id="top" role="footer">
 			<div class="container">
-				<p>Styled using <a href="http://getbootstrap.com/">Bootstrap</a>.  Hosted on <a href="https://github.com/">GitHub</a>.</p>
+				<p class="text-muted">Styled using <a href="http://getbootstrap.com/">Bootstrap</a>.  Hosted on <a href="https://github.com/">GitHub</a>.</p>
 			</div>
 		</footer>
 	</div> <!-- end container -->
 
 	<!-- javascript -->
-    <script src="js/bootstrap.min.js"></script>
+    <script src="../js/bootstrap.min.js"></script>
 </body>
 </html>
