--- a/217-website/Content/index.html
+++ b/217-website/Content/index.html
@@ -1,40 +1,12 @@
 <!doctype html>
 <html>
 <head>
+	<!-- Don't know -->
 	<meta charset="utf-8">
-	<title>Stat 217</title>
+	<title>Syllabus - Stat 217</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- Bootstrap -->
-	<link href="css/bootstrap.min.css" rel="stylesheet">
-	<script src="js/respond.js"></script>
-	<!-- FONTS -->
-	<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Vollkorn">
-	<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Oswald">
-	<!-- Custom -->
-    <link href="css/custom.css" rel="stylesheet">
-	<!-- Calendar -->
-	<link rel='stylesheet' href='fullcalendar-2.2.5/fullcalendar.css'>
-	<script src='fullcalendar-2.2.5/lib/jquery.min.js'></script>
-	<script src='fullcalendar-2.2.5/lib/moment.min.js'></script>
-	<script src='fullcalendar-2.2.5/fullcalendar.js'></script>
-	<script src='fullcalendar-2.2.5/gcal.js'></script>
-	<script type = "text/javascript">
-		$(document).ready(function() {
-
-		    // page is now ready, initialize the calendar...
-
-		    $('#calendar').fullCalendar({
-		        // put your options and callbacks here
-		        weekends: false, // will hide Saturdays and Sundays
-		        googleCalendarApiKey: 'AIzaSyAcOIEbIvUXtTdjiW88KamX_BZGH0S7qxw',
-		        events: {
-		            googleCalendarId: '205hlsh1e4vmv3p6m24fc08vrk@group.calendar.google.com'
-		        }, 
-		        aspectRatio: 1.4
-		    })
-
-		});
-	</script>
+	<link href="../css/bootstrap.min.css" rel="stylesheet">
 </head>
 
 <body>
@@ -58,12 +30,12 @@
 				   		<!-- LINKS -->
 						<div class = "collapse navbar-collapse" id = "collapse" role = "navigation">
 							<ul class = "nav navbar-nav">
-								<li class="active"><a href = "#">Home</a></li>
-								<li><a href = "FAQ/index.html">FAQ</a></li>
-								<li><a href = "Calendar/index.html">Calendar</a></li>
-								<li><a href = "Syllabus/index.html">Syllabus</a></li>
-								<li><a href = "Content/index.html">Content</a></li>
-								<li><a href = "People/index.html">People</a></li>
+								<li><a href = "../index.html">Home</a></li>
+								<li><a href = "../FAQ/index.html">FAQ</a></li>
+								<li><a href = "../Calendar/index.html">Calendar</a></li>
+								<li><a href = "../Syllabus/index.html">Syllabus</a></li>
+								<li class="active"><a href = "#">Content</a></li>
+								<li><a href = "../People/index.html">People</a></li>
 							</ul>
 						</div>
 					</div>
@@ -129,7 +101,7 @@
 		<!-- Footer -->
 		<footer id="top" role="footer">
 			<div class="container">
-				<p>Styled using <a href="http://getbootstrap.com/">Bootstrap</a>.  Hosted on <a href="https://github.com/">GitHub</a>.</p>
+				<p class="text-muted">Styled using <a href="http://getbootstrap.com/">Bootstrap</a>.  Hosted on <a href="https://github.com/">GitHub</a>.</p>
 			</div>
 		</footer>
 	</div> <!-- end container -->
