--- a/217-website/People/index.html
+++ b/217-website/People/index.html
@@ -1,40 +1,13 @@
 <!doctype html>
 <html>
-<head>
+	<!-- Don't know -->
 	<meta charset="utf-8">
-	<title>Stat 217</title>
+	<title>People - Stat 217</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- Bootstrap -->
-	<link href="css/bootstrap.min.css" rel="stylesheet">
-	<script src="js/respond.js"></script>
-	<!-- FONTS -->
-	<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Vollkorn">
-	<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Oswald">
-	<!-- Custom -->
-    <link href="css/custom.css" rel="stylesheet">
-	<!-- Calendar -->
-	<link rel='stylesheet' href='fullcalendar-2.2.5/fullcalendar.css'>
-	<script src='fullcalendar-2.2.5/lib/jquery.min.js'></script>
-	<script src='fullcalendar-2.2.5/lib/moment.min.js'></script>
-	<script src='fullcalendar-2.2.5/fullcalendar.js'></script>
-	<script src='fullcalendar-2.2.5/gcal.js'></script>
-	<script type = "text/javascript">
-		$(document).ready(function() {
-
-		    // page is now ready, initialize the calendar...
-
-		    $('#calendar').fullCalendar({
-		        // put your options and callbacks here
-		        weekends: false, // will hide Saturdays and Sundays
-		        googleCalendarApiKey: 'AIzaSyAcOIEbIvUXtTdjiW88KamX_BZGH0S7qxw',
-		        events: {
-		            googleCalendarId: '205hlsh1e4vmv3p6m24fc08vrk@group.calendar.google.com'
-		        }, 
-		        aspectRatio: 1.4
-		    })
-
-		});
-	</script>
+	<link href="../css/bootstrap.min.css" rel="stylesheet">
+	<!-- custom -->
+	<link href="css/custom.css" rel="stylesheet">
 </head>
 
 <body>
@@ -58,12 +31,12 @@
 				   		<!-- LINKS -->
 						<div class = "collapse navbar-collapse" id = "collapse" role = "navigation">
 							<ul class = "nav navbar-nav">
-								<li class="active"><a href = "#">Home</a></li>
-								<li><a href = "FAQ/index.html">FAQ</a></li>
-								<li><a href = "Calendar/index.html">Calendar</a></li>
-								<li><a href = "Syllabus/index.html">Syllabus</a></li>
-								<li><a href = "Content/index.html">Content</a></li>
-								<li><a href = "People/index.html">People</a></li>
+								<li><a href = "../index.html">Home</a></li>
+								<li><a href = "../FAQ/index.html">FAQ</a></li>
+								<li><a href = "../Calendar/index.html">Calendar</a></li>
+								<li><a href = "../Syllabus/index.html">Syllabus</a></li>
+								<li><a href = "../Content/index.html">Content</a></li>
+								<li class="active"><a href = "#">People</a></li>
 							</ul>
 						</div>
 					</div>
@@ -72,69 +45,28 @@
 		</header>
 
 		<!-- BODY -->
-		<div class = "row">
-			<div class = "col-lg-12 col-sm-12">
-				<!-- TITLE -->
-				<div class = "row" id = "class-title">
-					<h1>Intermediate Statistics</h1>
-					<h2>Stat 217 Section 2</h2>
+		<div class="row">
+		  	<div class="col-sm-6 col-md-4">
+		   		<div class="thumbnail">
+			      	<img class="thumbnail-image img-responsive" src="img/kevin-cbp.jpg" alt="...">
+				    <div class="caption">
+				    	<h3>Kevin Ferris</h3>
+				        <a href="mailto:kevin.ferris10@gmail.com">kevin.ferris10@gmail.com</p>
+				    </div>
 				</div>
-				<hr>
-
-				<!-- BROAD GOALS -->
-				<div class = "row" id = "class-goals">
-					<p>This class will</p>
-					<ul>
-						<li>cover common statistical procedures</li>
-						<li>improve your statistical thinking</li>
-						<li>introduce the R programming language</li>
-					</ul>
-				</div>
-				<hr>
-
-				<!-- LEARNING OBJECTIVES -->
-				<div class = "row" id = "class-learning-objectives">
-					<h2>Selected Topics</h2>
-					<ul>
-						<li>Introduction to R, R scripts, and the RStudio IDE</li>
-						<li>Plots for exploratory data analysis</li>
-						<li>Hypothesis testing, confidence intervals and assumptions for t-tests</li>
-						<li>Hypothesis testing, confidence intervals and assumptions for chi-square tests</li>
-						<li>ANOVA</li>
-						<li>Hypothesis testing, confidence intervals and assumptions for correlations and linear regression</li>
-						<li>When to use each of these statistical techniques</li>
-						<li>Using R</li>
-					</ul>
-				</div>
-				<hr>
-
-				<!-- MORE INFO -->
-				<div class='row' id='more-info'>
-					<h2>More Information</h2>
-					<p></p>
-				</div>
-				<hr>
 			</div>
-
-
-			<!-- Calendar -->
-			<div class = "row col-lg-12 col-sm-12">
-				<h2>Class Calendar</h1>
-				<div class="container">
-					<div id='calendar'></div>
-				</div>
-			</div> <!-- end content -->
-		</div> <!-- end row -->
+		</div>
 
 		<!-- Footer -->
 		<footer id="top" role="footer">
-			<div class="container">
-				<p>Styled using <a href="http://getbootstrap.com/">Bootstrap</a>.  Hosted on <a href="https://github.com/">GitHub</a>.</p>
+			<div class="container text-center">
+				<p class="text-muted">Styled using <a href="http://getbootstrap.com/">Bootstrap</a>.  Hosted on <a href="https://github.com/">GitHub</a>.</p>
 			</div>
 		</footer>
 	</div> <!-- end container -->
 
 	<!-- javascript -->
-    <script src="js/bootstrap.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script> <!-- load jquery for navbar -->
+    <script src="../js/bootstrap.min.js"></script>
 </body>
 </html>
