Update footer.  Use Spacelab theme from bootswatch.  Add Kevin and Mark to people tab.

--- a/217-website/index.html
+++ b/217-website/index.html
@@ -98,20 +98,14 @@
 					<ul>
 						<li>Introduction to R, R scripts, and the RStudio IDE</li>
 						<li>Plots for exploratory data analysis</li>
-						<li>Hypothesis testing, confidence intervals and assumptions for t-tests</li>
-						<li>Hypothesis testing, confidence intervals and assumptions for chi-square tests</li>
-						<li>ANOVA</li>
-						<li>Hypothesis testing, confidence intervals and assumptions for correlations and linear regression</li>
+						<li>Hypothesis testing, confidence intervals, and assumptions for t-tests</li>
+						<li>Hypothesis testing and assumptions for chi-square tests</li>
+						<li>One-Way and Two-Way ANOVA</li>
+						<li>Hypothesis testing, confidence intervals, and assumptions for correlations and linear regression</li>
+						<li>Multiple linear regression including interactions and multilevel variables</li>
 						<li>When to use each of these statistical techniques</li>
 						<li>Using R</li>
 					</ul>
-				</div>
-				<hr>
-
-				<!-- MORE INFO -->
-				<div class='row' id='more-info'>
-					<h2>More Information</h2>
-					<p></p>
 				</div>
 				<hr>
 			</div>
@@ -128,8 +122,8 @@
 
 		<!-- Footer -->
 		<footer id="top" role="footer">
-			<div class="container">
-				<p class="text-muted">Styled using <a href="http://getbootstrap.com/">Bootstrap</a>.  Hosted on <a href="https://github.com/">GitHub</a>.</p>
+			<div class="container text-center">
+				<p class="text-muted">Styled using <a href="http://getbootstrap.com/">Bootstrap</a>.  Theme by <a href="http://bootswatch.com/">Bootswatch</a>.  Hosted on <a href="https://github.com/">GitHub</a>.</p>
 			</div>
 		</footer>
 	</div> <!-- end container -->
