--- a/217-website/Calendar/index.html
+++ b/217-website/Calendar/index.html
@@ -5,7 +5,12 @@
 	<title>Calendar - Stat 217</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- Bootstrap -->
-	<link href="css/bootstrap.min.css" rel="stylesheet">
+	<link href="../css/bootstrap.min.css" rel="stylesheet">
+	<!-- FONTS -->
+	<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Vollkorn">
+	<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Oswald">
+	<!-- Custom -->
+    <link href="../css/custom.css" rel="stylesheet">
 	<!-- Calendar -->
 	<link rel='stylesheet' href='fullcalendar-2.2.5/fullcalendar.css'>
 	<script src='fullcalendar-2.2.5/lib/jquery.min.js'></script>
@@ -83,8 +88,8 @@
 
 		<!-- Footer -->
 		<footer id="top" role="footer">
-			<div class="container">
-				<p class="text-muted">Styled using <a href="http://getbootstrap.com/">Bootstrap</a>.  Hosted on <a href="https://github.com/">GitHub</a>.</p>
+			<div class="container text-center">
+				<p class="text-muted">Styled using <a href="http://getbootstrap.com/">Bootstrap</a>.  Theme by <a href="http://bootswatch.com/">Bootswatch</a>.  Hosted on <a href="https://github.com/">GitHub</a>.</p>
 			</div>
 		</footer>
 	</div> <!-- end container -->
