--- a/217-website/Content/index.html
+++ b/217-website/Content/index.html
@@ -3,10 +3,15 @@
 <head>
 	<!-- Don't know -->
 	<meta charset="utf-8">
-	<title>Syllabus - Stat 217</title>
+	<title>Content - Stat 217</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- Bootstrap -->
 	<link href="../css/bootstrap.min.css" rel="stylesheet">
+	<!-- FONTS -->
+	<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Vollkorn">
+	<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Oswald">
+	<!-- Custom -->
+    <link href="../css/custom.css" rel="stylesheet">
 </head>
 
 <body>
@@ -45,68 +50,133 @@
 
 		<!-- BODY -->
 		<div class = "row">
-			<div class = "col-lg-12 col-sm-12">
-				<!-- TITLE -->
-				<div class = "row" id = "class-title">
-					<h1>Intermediate Statistics</h1>
-					<h2>Stat 217 Section 2</h2>
+			<div class="container">
+				<div class="row">
+					<h2>Getting Started</h2>
+					<div class="col-lg-4 col-sm-6 col-xs-12">
+						<h4>Handouts</h4>
+					</div>
+					<div class="col-lg-4 col-sm-6 col-xs-12">
+						<h4>Homework</h4>
+						<ul><li><strong>Homework 1:</strong> Email Kevin at <a href="mailto:kevin.ferris10@gmail.com">kevin.ferris10@gmail.com</a></li></ul>
+					</div>
+					<div class="col-lg-4 col-sm-6 col-xs-12">
+						<h4>Other</h4>
+					</div>
 				</div>
 				<hr>
 
-				<!-- BROAD GOALS -->
-				<div class = "row" id = "class-goals">
-					<p>This class will</p>
-					<ul>
-						<li>cover common statistical procedures</li>
-						<li>improve your statistical thinking</li>
-						<li>introduce the R programming language</li>
-					</ul>
+				<h4>Coming soon...</h4>
+				<div class="row">
+					<h2>Chapter 1</h2>
+					<div class="col-lg-4 col-sm-6 col-xs-12">
+						<h4>Handouts</h4>
+					</div>
+					<div class="col-lg-4 col-sm-6 col-xs-12">
+						<h4>Homework</h4>
+					</div>
+					<div class="col-lg-4 col-sm-6 col-xs-12">
+						<h4>Other</h4>
+					</div>
 				</div>
 				<hr>
 
-				<!-- LEARNING OBJECTIVES -->
-				<div class = "row" id = "class-learning-objectives">
-					<h2>Selected Topics</h2>
-					<ul>
-						<li>Introduction to R, R scripts, and the RStudio IDE</li>
-						<li>Plots for exploratory data analysis</li>
-						<li>Hypothesis testing, confidence intervals and assumptions for t-tests</li>
-						<li>Hypothesis testing, confidence intervals and assumptions for chi-square tests</li>
-						<li>ANOVA</li>
-						<li>Hypothesis testing, confidence intervals and assumptions for correlations and linear regression</li>
-						<li>When to use each of these statistical techniques</li>
-						<li>Using R</li>
-					</ul>
+				<div class="row">
+					<h2>Chapter 2</h2>
+					<div class="col-lg-4 col-sm-6 col-xs-12">
+						<h4>Handouts</h4>
+					</div>
+					<div class="col-lg-4 col-sm-6 col-xs-12">
+						<h4>Homework</h4>
+					</div>
+					<div class="col-lg-4 col-sm-6 col-xs-12">
+						<h4>Other</h4>
+					</div>
 				</div>
 				<hr>
 
-				<!-- MORE INFO -->
-				<div class='row' id='more-info'>
-					<h2>More Information</h2>
-					<p></p>
+				<div class="row">
+					<h2>Chapter 3</h2>
+					<div class="col-lg-4 col-sm-6 col-xs-12">
+						<h4>Handouts</h4>
+					</div>
+					<div class="col-lg-4 col-sm-6 col-xs-12">
+						<h4>Homework</h4>
+					</div>
+					<div class="col-lg-4 col-sm-6 col-xs-12">
+						<h4>Other</h4>
+					</div>
+				</div>
+				<hr>
+
+				<div class="row">
+					<h2>Chapter 4</h2>
+					<div class="col-lg-4 col-sm-6 col-xs-12">
+						<h4>Handouts</h4>
+					</div>
+					<div class="col-lg-4 col-sm-6 col-xs-12">
+						<h4>Homework</h4>
+					</div>
+					<div class="col-lg-4 col-sm-6 col-xs-12">
+						<h4>Other</h4>
+					</div>
+				</div>
+				<hr>
+
+				<div class="row">
+					<h2>Chapter 5</h2>
+					<div class="col-lg-4 col-sm-6 col-xs-12">
+						<h4>Handouts</h4>
+					</div>
+					<div class="col-lg-4 col-sm-6 col-xs-12">
+						<h4>Homework</h4>
+					</div>
+					<div class="col-lg-4 col-sm-6 col-xs-12">
+						<h4>Other</h4>
+					</div>
+				</div>
+				<hr>
+
+				<div class="row">
+					<h2>Chapter 6</h2>
+					<div class="col-lg-4 col-sm-6 col-xs-12">
+						<h4>Handouts</h4>
+					</div>
+					<div class="col-lg-4 col-sm-6 col-xs-12">
+						<h4>Homework</h4>
+					</div>
+					<div class="col-lg-4 col-sm-6 col-xs-12">
+						<h4>Other</h4>
+					</div>
+				</div>
+				<hr>
+
+				<div class="row">
+					<h2>Chapter 7</h2>
+					<div class="col-lg-4 col-sm-6 col-xs-12">
+						<h4>Handouts</h4>
+					</div>
+					<div class="col-lg-4 col-sm-6 col-xs-12">
+						<h4>Homework</h4>
+					</div>
+					<div class="col-lg-4 col-sm-6 col-xs-12">
+						<h4>Other</h4>
+					</div>
 				</div>
 				<hr>
 			</div>
-
-
-			<!-- Calendar -->
-			<div class = "row col-lg-12 col-sm-12">
-				<h2>Class Calendar</h1>
-				<div class="container">
-					<div id='calendar'></div>
-				</div>
-			</div> <!-- end content -->
 		</div> <!-- end row -->
 
 		<!-- Footer -->
 		<footer id="top" role="footer">
-			<div class="container">
-				<p class="text-muted">Styled using <a href="http://getbootstrap.com/">Bootstrap</a>.  Hosted on <a href="https://github.com/">GitHub</a>.</p>
+			<div class="container text-center">
+				<p class="text-muted">Styled using <a href="http://getbootstrap.com/">Bootstrap</a>.  Theme by <a href="http://bootswatch.com/">Bootswatch</a>.  Hosted on <a href="https://github.com/">GitHub</a>.</p>
 			</div>
 		</footer>
 	</div> <!-- end container -->
 
 	<!-- javascript -->
-    <script src="js/bootstrap.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script> <!-- load jquery for navbar -->
+    <script src="../js/bootstrap.min.js"></script>
 </body>
 </html>
