--- a/217-website/FAQ/index.html
+++ b/217-website/FAQ/index.html
@@ -7,6 +7,11 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- Bootstrap -->
 	<link href="../css/bootstrap.min.css" rel="stylesheet">
+	<!-- FONTS -->
+	<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Vollkorn">
+	<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Oswald">
+	<!-- Custom -->
+    <link href="../css/custom.css" rel="stylesheet">
 </head>
 
 <body>
@@ -47,18 +52,24 @@
 			<div class = "col-lg-12 col-sm-12" id = "questions">
 				<h1>FAQ</h1>
 				<ul>
+					<li><a href="#textbook">Is the textbook required?  Can I use a previous edition of the textbook?</a></li>
 					<li><a href="#use-D2L">Will D2L be used for this course?</a></li>
 					<li><a href="#need-computer">Do I need a computer?</a></li>
 					<li><a href="#install-R">How do I install R and RStudio?</a></li>
 					<li><a href="#late-homeworks">Will lake homeworks be allowed?</a></li>
 					<li><a href="#grading-scale">What is the grading scale?</a></li>
 				</ul>
-			</div>
 			<hr>
+			</div>
 
 			<div class="col-lg-12 col-sm-12" id="answers">
+				<h2 id="textbook">Is the textbook required?  Can I use a previous edition of the textbook?</h2>
+				<p>Yes, the textbook is required.  You can buy a paper copy from the bookstore for approximately $35.  Additionally, an ebook <a href="#">is available</a> for download.</p>
+
 				<h2 id="use-D2L">Will D2L be used for this course?</h2>
 				<p>D2L will be used for grades only.  All content and scheduling announcements will be posted on this site.</p>
+				<hr>
+
 				<h2 id="need-computer">Do I need a computer?</h2>
 				<p>A computer is not required, but it will be helpful to complete homeworks.</p>
 				<p>If you do not have a computer, you will need to use a computer in either the Roberts Hall computer lab (ROBH 101) or the Reid Hall computer lab (REID 306).  These computers can be used by students and come with R installed.</p>
@@ -81,11 +92,10 @@
 
 		<!-- Footer -->
 		<footer id="top" role="footer">
-			<div class="container">
-				<p class="text-muted">Styled using <a href="http://getbootstrap.com/">Bootstrap</a>.  Hosted on <a href="https://github.com/">GitHub</a>.</p>
+			<div class="container text-center">
+				<p class="text-muted">Styled using <a href="http://getbootstrap.com/">Bootstrap</a>.  Theme by <a href="http://bootswatch.com/">Bootswatch</a>.  Hosted on <a href="https://github.com/">GitHub</a>.</p>
 			</div>
 		</footer>
-
 	</div> <!-- close container -->
 
 	<!-- javascript -->
