--- a/217-website/People/index.html
+++ b/217-website/People/index.html
@@ -6,8 +6,11 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- Bootstrap -->
 	<link href="../css/bootstrap.min.css" rel="stylesheet">
-	<!-- custom -->
-	<link href="css/custom.css" rel="stylesheet">
+	<!-- FONTS -->
+	<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Vollkorn">
+	<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Oswald">
+	<!-- Custom -->
+    <link href="../css/custom.css" rel="stylesheet">
 </head>
 
 <body>
@@ -46,12 +49,23 @@
 
 		<!-- BODY -->
 		<div class="row">
+			<div class="col-sm-6 col-md-4">
+				<div class="thumbnail">
+					<img src="img/mark.jpg" alt="..." class="thumbnail-image img-responsive">
+					<div class="caption">
+						<h3>Mark Greenwood</h3>
+						<a href="mailto:greenwood.stat@gmail.com">greenwood.stat@gmail.com</a>
+						<p>Course Instructor</p>
+					</div>
+				</div>
+			</div>
 		  	<div class="col-sm-6 col-md-4">
 		   		<div class="thumbnail">
 			      	<img class="thumbnail-image img-responsive" src="img/kevin-cbp.jpg" alt="...">
 				    <div class="caption">
 				    	<h3>Kevin Ferris</h3>
-				        <a href="mailto:kevin.ferris10@gmail.com">kevin.ferris10@gmail.com</p>
+				        <a href="mailto:kevin.ferris10@gmail.com">kevin.ferris10@gmail.com</a>
+				        <p>TA for Section 2.</p>
 				    </div>
 				</div>
 			</div>
@@ -60,7 +74,7 @@
 		<!-- Footer -->
 		<footer id="top" role="footer">
 			<div class="container text-center">
-				<p class="text-muted">Styled using <a href="http://getbootstrap.com/">Bootstrap</a>.  Hosted on <a href="https://github.com/">GitHub</a>.</p>
+				<p class="text-muted">Styled using <a href="http://getbootstrap.com/">Bootstrap</a>.  Theme by <a href="http://bootswatch.com/">Bootswatch</a>.  Hosted on <a href="https://github.com/">GitHub</a>.</p>
 			</div>
 		</footer>
 	</div> <!-- end container -->
