--- a/217-website/Calendar/index.html
+++ b/217-website/Calendar/index.html
@@ -5,7 +5,12 @@
 	<title>Calendar - Stat 217</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- Bootstrap -->
-	<link href="css/bootstrap.min.css" rel="stylesheet">
+	<link href="../css/bootstrap.min.css" rel="stylesheet">
+	<!-- FONTS -->
+	<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Vollkorn">
+	<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Oswald">
+	<!-- Custom -->
+    <link href="../css/custom.css" rel="stylesheet">
 	<!-- Calendar -->
 	<link rel='stylesheet' href='fullcalendar-2.2.5/fullcalendar.css'>
 	<script src='fullcalendar-2.2.5/lib/jquery.min.js'></script>
@@ -52,24 +57,9 @@
 				   		<!-- LINKS -->
 						<div class = "collapse navbar-collapse" id = "collapse" role = "navigation">
 							<ul class = "nav navbar-nav">
-<<<<<<< HEAD
-<<<<<<< HEAD
-<<<<<<< HEAD
 								<li><a href = "../index.html">Home</a></li>
-								<li class="active"><a href="../FAQ/index.html">FAQ</a></li>
-=======
-								<li class="active"><a href = "../index.html">Home</a></li>
-								<li><a href = "../FAQ/index.html">FAQ</a></li>
->>>>>>> parent of a7520f6... Fix navbars, make footers text-muted, beginning working on images for People page
-=======
-								<li class="active"><a href = "../index.html">Home</a></li>
-								<li><a href = "../FAQ/index.html">FAQ</a></li>
->>>>>>> parent of a7520f6... Fix navbars, make footers text-muted, beginning working on images for People page
-=======
-								<li class="active"><a href = "../index.html">Home</a></li>
-								<li><a href = "../FAQ/index.html">FAQ</a></li>
->>>>>>> parent of a7520f6... Fix navbars, make footers text-muted, beginning working on images for People page
-								<li><a href = "#">Calendar</a></li>
+								<li><a href="../FAQ/index.html">FAQ</a></li>
+								<li class="active"><a href = "#">Calendar</a></li>
 								<li><a href = "../Syllabus/index.html">Syllabus</a></li>
 								<li><a href = "../Content/index.html">Content</a></li>
 								<li><a href = "../People/index.html">People</a></li>
@@ -98,8 +88,8 @@
 
 		<!-- Footer -->
 		<footer id="top" role="footer">
-			<div class="container">
-				<p>Styled using <a href="http://getbootstrap.com/">Bootstrap</a>.  Hosted on <a href="https://github.com/">GitHub</a>.</p>
+			<div class="container text-center">
+				<p class="text-muted">Styled using <a href="http://getbootstrap.com/">Bootstrap</a>.  Theme by <a href="http://bootswatch.com/">Bootswatch</a>.  Hosted on <a href="https://github.com/">GitHub</a>.</p>
 			</div>
 		</footer>
 	</div> <!-- end container -->
