--- a/217-website/FAQ/index.html
+++ b/217-website/FAQ/index.html
@@ -35,12 +35,11 @@
 						<div class = "collapse navbar-collapse" id = "collapse" role = "navigation">
 							<ul class = "nav navbar-nav">
 								<li><a href = "../index.html">Home</a></li>
-								<li class="active"><a href="#">FAQ</a></li>
-								<li><a href = "#">Calendar</a></li>
-								<li><a href = "#">Syllabus</a></li>
-								<li><a href = "#">Content</a></li>
-								<li><a href = "#">People</a></li>
-							</ul>
+								<li class="active"><a href = "#">FAQ</a></li>
+								<li><a href = "../Calendar/index.html">Calendar</a></li>
+								<li><a href = "../Syllabus/index.html">Syllabus</a></li>
+								<li><a href = "../Content/index.html">Content</a></li>
+								<li><a href = "../People/index.html">People</a></li>
 						</div>
 					</div>
 				</nav>
@@ -52,17 +51,8 @@
 			<div class = "col-lg-12 col-sm-12" id = "questions">
 				<h1>FAQ</h1>
 				<ul>
-<<<<<<< HEAD
-<<<<<<< HEAD
-<<<<<<< HEAD
 					<li><a href="#textbook">Is the textbook required?  Can I use a previous edition of the textbook?</a></li>
 					<li><a href="#use-D2L">Will D2L be used for this course?</a></li>
-=======
->>>>>>> parent of a7520f6... Fix navbars, make footers text-muted, beginning working on images for People page
-=======
->>>>>>> parent of a7520f6... Fix navbars, make footers text-muted, beginning working on images for People page
-=======
->>>>>>> parent of a7520f6... Fix navbars, make footers text-muted, beginning working on images for People page
 					<li><a href="#need-computer">Do I need a computer?</a></li>
 					<li><a href="#install-R">How do I install R and RStudio?</a></li>
 					<li><a href="#late-homeworks">Will lake homeworks be allowed?</a></li>
@@ -72,9 +62,6 @@
 			</div>
 
 			<div class="col-lg-12 col-sm-12" id="answers">
-<<<<<<< HEAD
-<<<<<<< HEAD
-<<<<<<< HEAD
 				<h2 id="textbook">Is the textbook required?  Can I use a previous edition of the textbook?</h2>
 				<p>Yes, the textbook is required.  You can buy a paper copy from the bookstore for approximately $35.  Additionally, an ebook <a href="#">is available</a> for download.</p>
 
@@ -82,12 +69,6 @@
 				<p>D2L will be used for grades only.  All content and scheduling announcements will be posted on this site.</p>
 				<hr>
 
-=======
->>>>>>> parent of a7520f6... Fix navbars, make footers text-muted, beginning working on images for People page
-=======
->>>>>>> parent of a7520f6... Fix navbars, make footers text-muted, beginning working on images for People page
-=======
->>>>>>> parent of a7520f6... Fix navbars, make footers text-muted, beginning working on images for People page
 				<h2 id="need-computer">Do I need a computer?</h2>
 				<p>A computer is not required, but it will be helpful to complete homeworks.</p>
 				<p>If you do not have a computer, you will need to use a computer in either the Roberts Hall computer lab (ROBH 101) or the Reid Hall computer lab (REID 306).  These computers can be used by students and come with R installed.</p>
@@ -111,9 +92,6 @@
 
 			</div> <!-- close answers -->
 		</div> 
-<<<<<<< HEAD
-<<<<<<< HEAD
-<<<<<<< HEAD
 
 		<!-- Footer -->
 		<footer id="top" role="footer">
@@ -121,15 +99,10 @@
 				<p class="text-muted">Styled using <a href="http://getbootstrap.com/">Bootstrap</a>.  Theme by <a href="http://bootswatch.com/">Bootswatch</a>.  Hosted on <a href="https://github.com/">GitHub</a>.</p>
 			</div>
 		</footer>
-=======
->>>>>>> parent of a7520f6... Fix navbars, make footers text-muted, beginning working on images for People page
-=======
->>>>>>> parent of a7520f6... Fix navbars, make footers text-muted, beginning working on images for People page
-=======
->>>>>>> parent of a7520f6... Fix navbars, make footers text-muted, beginning working on images for People page
 	</div> <!-- close container -->
 
 	<!-- javascript -->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="../js/bootstrap.min.js"></script>
 </body>
 </html>
