--- a/217-website/index.html
+++ b/217-website/index.html
@@ -14,7 +14,7 @@
     <link href="css/custom.css" rel="stylesheet">
 	<!-- Calendar -->
 	<link rel='stylesheet' href='fullcalendar-2.2.5/fullcalendar.css'>
-	<script src='fullcalendar-2.2.5/lib/jquery.min.js'></script>
+	<script src='fullcalendar-2.2.5/lib/jquery.min.js'></script> <!-- jquery is loaded here -->
 	<script src='fullcalendar-2.2.5/lib/moment.min.js'></script>
 	<script src='fullcalendar-2.2.5/fullcalendar.js'></script>
 	<script src='fullcalendar-2.2.5/gcal.js'></script>
@@ -122,19 +122,8 @@
 
 		<!-- Footer -->
 		<footer id="top" role="footer">
-<<<<<<< HEAD
 			<div class="container text-center">
 				<p class="text-muted">Styled using <a href="http://getbootstrap.com/">Bootstrap</a>.  Theme by <a href="http://bootswatch.com/">Bootswatch</a>.  Hosted on <a href="https://github.com/">GitHub</a>.</p>
-=======
-			<div class="container">
-				<p>Styled using <a href="http://getbootstrap.com/">Bootstrap</a>.  Hosted on <a href="https://github.com/">GitHub</a>.</p>
-<<<<<<< HEAD
-<<<<<<< HEAD
->>>>>>> parent of a7520f6... Fix navbars, make footers text-muted, beginning working on images for People page
-=======
->>>>>>> parent of a7520f6... Fix navbars, make footers text-muted, beginning working on images for People page
-=======
->>>>>>> parent of a7520f6... Fix navbars, make footers text-muted, beginning working on images for People page
 			</div>
 		</footer>
 	</div> <!-- end container -->
