Add Syllabus, FAQ questions, link to ebook

--- a/217-website/FAQ/index.html
+++ b/217-website/FAQ/index.html
@@ -55,6 +55,7 @@
 					<li><a href="#use-D2L">Will D2L be used for this course?</a></li>
 					<li><a href="#need-computer">Do I need a computer?</a></li>
 					<li><a href="#install-R">How do I install R and RStudio?</a></li>
+					<li><a href="group-work">Are we allowed to work in groups?</a></li>
 					<li><a href="#late-homeworks">Will lake homeworks be allowed?</a></li>
 					<li><a href="#grading-scale">What is the grading scale?</a></li>
 				</ul>
@@ -63,7 +64,8 @@
 
 			<div class="col-lg-12 col-sm-12" id="answers">
 				<h2 id="textbook">Is the textbook required?  Can I use a previous edition of the textbook?</h2>
-				<p>Yes, the textbook is required.  You can buy a paper copy from the bookstore for approximately $35.  Additionally, an ebook <a href="#">is available</a> for download.</p>
+				<p>Yes, the textbook is required.  You can buy a paper copy from the bookstore for approximately $35.  Additionally, an ebook <a href="https://scholarworks.montana.edu/xmlui/handle/1/2999">is available</a> for download.</p>
+				<hr>
 
 				<h2 id="use-D2L">Will D2L be used for this course?</h2>
 				<p>D2L will be used for grades only.  All content and scheduling announcements will be posted on this site.</p>
@@ -76,6 +78,10 @@
 
 				<h2 id="install-R">How do I install R and RStudio?</h2>
 				<p>The easiest way to download R and RStudio is to just Google "download r" and "download rstudio" then follow the instructions for installing on your OS.  You will need to have Administrator Priviledges when installing (this could be a problem if you have been issued a computer by work).  If you have any troubles installing, please let me know.</p>
+				<hr>
+
+				<h2 id="group-work">Are we allowed to work in groups?</h2>
+				<p>Yes!  Group work is encouraged, but please have no more than five people to a group.</p>
 				<hr>
 
 				<h2 id="late-homeworks">Will late homeworks be allowed?</h2>
