--- a/217-website/Syllabus/index.html
+++ b/217-website/Syllabus/index.html
@@ -49,120 +49,8 @@
 
 		<!-- BODY -->
 		<div class = "row">
-			<div class="container">
-				<div class="row">
-					<h2>Getting Started</h2>
-					<div class="col-lg-4 col-sm-6 col-xs-12">
-						<h4>Handouts</h4>
-					</div>
-					<div class="col-lg-4 col-sm-6 col-xs-12">
-						<h4>Homework</h4>
-						<ul><li><strong>Homework 1:</strong> Email Kevin at <a href="mailto:kevin.ferris10@gmail.com">kevin.ferris10@gmail.com</a></li></ul>
-					</div>
-					<div class="col-lg-4 col-sm-6 col-xs-12">
-						<h4>Other</h4>
-					</div>
-				</div>
-				<hr>
-
-				<h4>Coming soon...</h4>
-				<div class="row">
-					<h2>Chapter 1</h2>
-					<div class="col-lg-4 col-sm-6 col-xs-12">
-						<h4>Handouts</h4>
-					</div>
-					<div class="col-lg-4 col-sm-6 col-xs-12">
-						<h4>Homework</h4>
-					</div>
-					<div class="col-lg-4 col-sm-6 col-xs-12">
-						<h4>Other</h4>
-					</div>
- 				</div>
- 				<hr>
-
-				<div class="row">
-					<h2>Chapter 2</h2>
-					<div class="col-lg-4 col-sm-6 col-xs-12">
-						<h4>Handouts</h4>
-					</div>
-					<div class="col-lg-4 col-sm-6 col-xs-12">
-						<h4>Homework</h4>
-					</div>
-					<div class="col-lg-4 col-sm-6 col-xs-12">
-						<h4>Other</h4>
-					</div>
- 				</div>
- 				<hr>
-
-				<div class="row">
-					<h2>Chapter 3</h2>
-					<div class="col-lg-4 col-sm-6 col-xs-12">
-						<h4>Handouts</h4>
-					</div>
-					<div class="col-lg-4 col-sm-6 col-xs-12">
-						<h4>Homework</h4>
-					</div>
-					<div class="col-lg-4 col-sm-6 col-xs-12">
-						<h4>Other</h4>
-					</div>
- 				</div>
- 				<hr>
-
-				<div class="row">
-					<h2>Chapter 4</h2>
-					<div class="col-lg-4 col-sm-6 col-xs-12">
-						<h4>Handouts</h4>
-					</div>
-					<div class="col-lg-4 col-sm-6 col-xs-12">
-						<h4>Homework</h4>
-					</div>
-					<div class="col-lg-4 col-sm-6 col-xs-12">
-						<h4>Other</h4>
-					</div>
- 				</div>
- 				<hr>
-
-				<div class="row">
-					<h2>Chapter 5</h2>
-					<div class="col-lg-4 col-sm-6 col-xs-12">
-						<h4>Handouts</h4>
-					</div>
-					<div class="col-lg-4 col-sm-6 col-xs-12">
-						<h4>Homework</h4>
-					</div>
-					<div class="col-lg-4 col-sm-6 col-xs-12">
-						<h4>Other</h4>
-					</div>
- 				</div>
- 				<hr>
-
-				<div class="row">
-					<h2>Chapter 6</h2>
-					<div class="col-lg-4 col-sm-6 col-xs-12">
-						<h4>Handouts</h4>
-					</div>
-					<div class="col-lg-4 col-sm-6 col-xs-12">
-						<h4>Homework</h4>
-					</div>
-					<div class="col-lg-4 col-sm-6 col-xs-12">
-						<h4>Other</h4>
-					</div>
- 				</div>
- 				<hr>
-
-				<div class="row">
-					<h2>Chapter 7</h2>
-					<div class="col-lg-4 col-sm-6 col-xs-12">
-						<h4>Handouts</h4>
-					</div>
-					<div class="col-lg-4 col-sm-6 col-xs-12">
-						<h4>Homework</h4>
-					</div>
-					<div class="col-lg-4 col-sm-6 col-xs-12">
-						<h4>Other</h4>
-					</div>
- 				</div>
- 				<hr>
+			<div class="container text-center">
+				<iframe src="Syllabus_S217_Spring2015-Kevin.pdf" width='1000' height='500' frameborder='0'></iframe>
 			</div>
 		</div> <!-- end row -->
 
