--- a/217-website/Content/index.html
+++ b/217-website/Content/index.html
@@ -61,6 +61,9 @@
 					</div>
 					<div class="col-lg-4 col-sm-6 col-xs-12">
 						<h4>Other</h4>
+						<ul>
+							<li><a href="https://scholarworks.montana.edu/xmlui/handle/1/2999">ebook</a></li>
+						</ul>
 					</div>
 				</div>
 				<hr>
