Add schedule of content

--- a/217-website/Calendar/index.html
+++ b/217-website/Calendar/index.html
@@ -72,18 +72,23 @@
 
 		<!-- BODY -->
 		<div class = "row">
-			<!-- Class Calendar -->
-			<div class = "col-lg-12 col-sm-12">
-				<h1>Class Calendar</h1>
-				<div class="container">
-					<div id='calendar'></div>
-				</div>
-			</div> <!-- end class calendar -->
-			<hr>
+			<div class="container">
+				<!-- Class Calendar -->
+				<div class = "col-lg-12 col-sm-12">
+					<h1>Class Calendar</h1>
+					<div class="container">
+						<div id='calendar'></div>
+					</div>
+				</div> <!-- end class calendar -->
+				<hr>
 
-			<div class = "col-lg-12 col-sm-12">
-				<h1>Schedule of Content</h1>
-			</div> <!-- end content -->
+				<div class = "col-lg-12 col-sm-12">
+					<h1>Schedule of Content</h1>
+				</div> <!-- end content -->
+				<div class="text-center">
+					<iframe src="CalendarS2015.pdf" width='1000' height='525' frameborder='0'></iframe>
+				</div>
+			</div>
 		</div> <!-- end row -->
 
 		<!-- Footer -->
