Fix typo and update grading scale

--- a/217-website/FAQ/index.html
+++ b/217-website/FAQ/index.html
@@ -55,7 +55,7 @@
 					<li><a href="#use-D2L">Will D2L be used for this course?</a></li>
 					<li><a href="#need-computer">Do I need a computer?</a></li>
 					<li><a href="#install-R">How do I install R and RStudio?</a></li>
-					<li><a href="group-work">Are we allowed to work in groups?</a></li>
+					<li><a href="#group-work">Are we allowed to work in groups?</a></li>
 					<li><a href="#late-homeworks">Will lake homeworks be allowed?</a></li>
 					<li><a href="#grading-scale">What is the grading scale?</a></li>
 				</ul>
@@ -94,6 +94,15 @@
 				<ul>
 					<li><i>A</i> 93-100</li>
 					<li><i>A-</i> 90-92</li>
+					<li><i>B+</i> 87-90</li>
+					<li><i>B</i> 82-87</li>
+					<li><i>B-</i> 80-82</li>
+					<li><i>C+</i> 77-80</li>
+					<li><i>C</i> 72-77</li>
+					<li><i>C-</i> 70-72</li>
+					<li><i>D+</i> 67-70</li>
+					<li><i>D</i> 60-67</li>
+					<li><i>F</i> less than 60</li>
 				</ul>
 
 			</div> <!-- close answers -->
