Update grading scale, fix typos

--- a/217-website/FAQ/index.html
+++ b/217-website/FAQ/index.html
@@ -77,7 +77,7 @@
 				<hr>
 
 				<h2 id="install-R">How do I install R and RStudio?</h2>
-				<p>The easiest way to download R and RStudio is to just Google "download r" and "download rstudio" then follow the instructions for installing on your OS.  You will need to have Administrator Priviledges when installing (this could be a problem if you have been issued a computer by work).  If you have any troubles installing, please let me know.</p>
+				<p>The easiest way to download R and RStudio is to just Google "download r" and "download rstudio" then follow the instructions for installing on your OS.  You will need to have Administrator Priviledges when installing (this could be a problem if you have been issued a computer by work).  The text book also explains how to get started with R in Section 0.1 (page 8).  If you have any troubles installing, please let me know.</p>
 				<hr>
 
 				<h2 id="group-work">Are we allowed to work in groups?</h2>
@@ -92,17 +92,17 @@
 
 				<h2 id="grading-scale">What is the grading scale?</h2>
 				<ul>
-					<li><i>A</i> 93-100</li>
+					<li><i>A </i> 93-100</li>
 					<li><i>A-</i> 90-92</li>
 					<li><i>B+</i> 87-90</li>
-					<li><i>B</i> 82-87</li>
+					<li><i>B </i> 82-87</li>
 					<li><i>B-</i> 80-82</li>
 					<li><i>C+</i> 77-80</li>
-					<li><i>C</i> 72-77</li>
+					<li><i>C </i> 72-77</li>
 					<li><i>C-</i> 70-72</li>
 					<li><i>D+</i> 67-70</li>
-					<li><i>D</i> 60-67</li>
-					<li><i>F</i> less than 60</li>
+					<li><i>D </i> 60-67</li>
+					<li><i>F </i> less than 60</li>
 				</ul>
 
 			</div> <!-- close answers -->
