Update Office Hours, Syllabus, and FAQ

--- a/217-website/Content/index.html
+++ b/217-website/Content/index.html
@@ -54,6 +54,10 @@
 					<h2>Getting Started</h2>
 					<div class="col-lg-4 col-sm-6 col-xs-12">
 						<h4>Handouts</h4>
+						<ul>
+							<li><a href="../Syllabus/index.html">Syllabus</a></li>
+							<li><a href="../Calendar/index.html">Calendar</a></li>
+						</ul>
 					</div>
 					<div class="col-lg-4 col-sm-6 col-xs-12">
 						<h4>Homework</h4>
@@ -68,11 +72,13 @@
 				</div>
 				<hr>
 
-				<h4>Coming soon...</h4>
 				<div class="row">
 					<h2>Chapter 1</h2>
 					<div class="col-lg-4 col-sm-6 col-xs-12">
 						<h4>Handouts</h4>
+						<ul>
+							<li><a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Ch1/mockjury.pdf">Mock Jury introduction</a></li>
+						</ul>
 					</div>
 					<div class="col-lg-4 col-sm-6 col-xs-12">
 						<h4>Homework</h4>
