--- a/217-website/FAQ/index.html
+++ b/217-website/FAQ/index.html
@@ -64,7 +64,8 @@
 
 			<div class="col-lg-12 col-sm-12" id="answers">
 				<h2 id="textbook">Is the textbook required?  Can I use a previous edition of the textbook?</h2>
-				<p>Yes, the textbook is required.  You can buy a paper copy from the bookstore for approximately $35.  Additionally, an ebook <a href="https://scholarworks.montana.edu/xmlui/handle/1/2999">is available</a> for download.</p>
+				<p>Yes, the textbook is required.  You can buy a paper copy from the bookstore for approximately $35.  Additionally, an ebook <a href="https://scholarworks.montana.edu/xmlui/handle/1/2999">is available for download</a>.</p>
+				<p>Older versions of the textbook are not recommended.  The book has substantially changed from Version 1 to Version 2 so we strongly encourage you to use the new book.</p>
 				<hr>
 
 				<h2 id="use-D2L">Will D2L be used for this course?</h2>
