--- a/217-website/People/index.html
+++ b/217-website/People/index.html
@@ -52,8 +52,9 @@
 					<img src="img/mark.jpg" alt="..." class="thumbnail-image img-responsive">
 					<div class="caption">
 						<h3>Mark Greenwood</h3>
-						<a href="mailto:greenwood.stat@gmail.com">greenwood.stat@gmail.com</a>
+						<p><a href="mailto:greenwood.stat@gmail.com">greenwood.stat@gmail.com</a></p>
 						<p>Course Instructor</p>
+						<p>Willson 2-228</p>
 					</div>
 				</div>
 			</div>
@@ -62,8 +63,11 @@
 					<img src="img/kevin-cbp.jpg" alt="..." class="thumbnail-image img-responsive">
 					<div class="caption">
 						<h3>Kevin Ferris</h3>
-						<a href="mailto:kevin.ferris10@gmail.com">kevin.ferris10@gmail.com</a>
+						<p><a href="mailto:kevin.ferris10@gmail.com">kevin.ferris10@gmail.com</a></p>
 						<p>TA for Section 002</p>
+						<p>Willson 1-105</p>
+						<p><strong>OH:</strong> Tu 12-1, Th 2-3, Fr 12-1</p>
+						<p><strong>MLC:</strong> Th 5-8</p>
 					</div>
 				</div>
 			</div>
