Add link to handout for Jan 21

--- a/217-website/Content/index.html
+++ b/217-website/Content/index.html
@@ -80,6 +80,7 @@
 						<ul>
 							<li><a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Ch1/mockjury.pdf">Mock Jury introduction</a> (Jan 14)</li>
 							<li><a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Ch1/mock-permute-handout.html">Permutation of Mock Jury Data</a> (Jan 16)</li>
+							<li><a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Ch1/permutation_t_test_w_code.pdf">T-Test of Mock Jury Data</a> (Jan 21)</li>
 						</ul>
 					</div>
 					<div class="col-lg-4 col-sm-6 col-xs-12">
