--- a/217-website/FAQ/index.html
+++ b/217-website/FAQ/index.html
@@ -65,7 +65,7 @@
 
 			<div class="col-lg-12 col-sm-12" id="answers">
 				<h2 id="stat-216-required">Is STAT 216 required for this course?</h2>
-				<p>Yes, you must have taken STAT 216 (or an equivalent course).  This course will continue where STAT 216 left off so it is important that you have recently taken STAT 216.</p>
+				<p>Yes, you must have taken STAT 216 (or an equivalent course).  Stat 217 continues where STAT 216 left off so it is important that you have recently taken STAT 216.</p>
 				<hr>
 
 				<h2 id="textbook">Is the textbook required?  Can I use a previous edition of the textbook?</h2>
