Added Links for Project 2, Project Writing Guideline, and Jan 23 Handout

--- a/217-website/Content/index.html
+++ b/217-website/Content/index.html
@@ -81,6 +81,7 @@
 							<li><a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Ch1/mockjury.pdf">Mock Jury introduction</a> (Jan 14)</li>
 							<li><a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Ch1/mock-permute-handout.html">Permutation of Mock Jury Data</a> (Jan 16)</li>
 							<li><a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Ch1/permutation_t_test_w_code.pdf">T-Test of Mock Jury Data</a> (Jan 21)</li>
+							<li><a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Ch1/assumptions-scope-inference.pdf">Assumptions Example and Scope of Inference</a> (Jan 23)</li>
 						</ul>
 					</div>
 					<div class="col-lg-4 col-sm-6 col-xs-12">
@@ -92,10 +93,19 @@
 								<br>
 								<a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Proj1/stress.csv">Stress Data for Project 1</a>
 							</li>
+							<li>
+								<a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Proj2/Project2.pdf">Project 2</a>
+								<span>(Due Jan 30)</span>
+								<br>
+								<a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Proj2/bumpus.csv">Bumpus Data for Project 2</a>
+							</li>
 						</ul>
 					</div>
 					<div class="col-lg-4 col-sm-6 col-xs-12">
 						<h4>Other</h4>
+						<ul>
+							<li><a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/ProjectWritingGuidelines.pdf">Project Writing Guidelines</a></li>
+						</ul>
 					</div>
  				</div>
  				<hr>
