Add link for T-test Activity

--- a/217-website/Content/index.html
+++ b/217-website/Content/index.html
@@ -99,12 +99,19 @@
 								<br>
 								<a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Proj2/bumpus.csv">Bumpus Data for Project 2</a>
 							</li>
+							<li><strong>Homework 2</strong>: Located in Activity 3</li>
 						</ul>
 					</div>
 					<div class="col-lg-4 col-sm-6 col-xs-12">
 						<h4>Other</h4>
 						<ul>
 							<li><a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/ProjectWritingGuidelines.pdf">Project Writing Guidelines</a></li>
+							<li>
+								<a href="http://kferris10.github.io/Ch1-ttests-and-CIs
+ ">T-test and CIs activity</a>
+ 								<br>
+ 								<a href="https://raw.githubusercontent.com/kferris10/Ch1-ttests-and-CIs/gh-pages/nfl-stats.csv">NFL Statistics</a> (Optional)
+ 							</li>
 						</ul>
 					</div>
  				</div>
