--- a/217-website/FAQ/index.html
+++ b/217-website/FAQ/index.html
@@ -69,7 +69,7 @@
 				<hr>
 
 				<h2 id="textbook">Is the textbook required?  Can I use a previous edition of the textbook?</h2>
-				<p>Yes, the textbook is required.  You can buy a paper copy from the bookstore for approximately $35.  Additionally, an ebook <a href="https://scholarworks.montana.edu/xmlui/handle/1/2999">is available for download</a>.</p>
+				<p>Yes, the textbook is required.  You can buy a paper copy from the bookstore for about $30.  Additionally, an ebook <a href="https://scholarworks.montana.edu/xmlui/handle/1/2999">is available for download</a>.</p>
 				<p>Older versions of the textbook are not recommended.  The book has substantially changed from Version 1 to Version 2 so we strongly encourage you to use the new book.</p>
 				<hr>
 
