--- a/217-website/Content/index.html
+++ b/217-website/Content/index.html
@@ -99,7 +99,7 @@
 								<br>
 								<a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Proj2/bumpus.csv">Bumpus Data for Project 2</a>
 							</li>
-							<li><strong>Homework 2</strong>: Located in Activity 3</li>
+							<li><strong>Homework 2</strong>: Located in <em>T-test and CIs</em> activity</li>
 						</ul>
 					</div>
 					<div class="col-lg-4 col-sm-6 col-xs-12">
