Adjust column sizes in Content

--- a/217-website/Content/index.html
+++ b/217-website/Content/index.html
@@ -52,18 +52,18 @@
 			<div class="container">
 				<div class="row">
 					<h2>Getting Started</h2>
-					<div class="col-lg-4 col-sm-6 col-xs-12">
+					<div class="col-md-4 col-sm-12">
 						<h4>Handouts</h4>
 						<ul>
 							<li><a href="../Syllabus/index.html">Syllabus</a></li>
 							<li><a href="../Calendar/index.html">Calendar</a></li>
 						</ul>
 					</div>
-					<div class="col-lg-4 col-sm-6 col-xs-12">
+					<div class="col-md-4 col-sm-12">
 						<h4>Homework</h4>
 						<ul><li><strong>Homework 1:</strong> Email Kevin at <a href="mailto:kevin.ferris10@gmail.com">kevin.ferris10@gmail.com</a> (Due Jan 16)</li></ul>
 					</div>
-					<div class="col-lg-4 col-sm-6 col-xs-12">
+					<div class="col-md-4 col-sm-12">
 						<h4>Other</h4>
 						<ul>
 							<li><a href="https://scholarworks.montana.edu/xmlui/handle/1/2999">ebook</a></li>
@@ -75,7 +75,7 @@
 
 				<div class="row">
 					<h2>Chapter 1</h2>
-					<div class="col-lg-4 col-sm-6 col-xs-12">
+					<div class="col-md-4 col-sm-12">
 						<h4>Handouts</h4>
 						<ul>
 							<li><a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Ch1/mockjury.pdf">Mock Jury introduction</a> (Jan 14)</li>
@@ -84,7 +84,7 @@
 							<li><a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Ch1/assumptions-scope-inference.pdf">Assumptions Example and Scope of Inference</a> (Jan 23)</li>
 						</ul>
 					</div>
-					<div class="col-lg-4 col-sm-6 col-xs-12">
+					<div class="col-md-4 col-sm-12">
 						<h4>Homework</h4>
 						<ul>
 							<li>
@@ -102,7 +102,7 @@
 							<li><strong>Homework 2</strong>: Located in <em>T-test and CIs</em> activity</li>
 						</ul>
 					</div>
-					<div class="col-lg-4 col-sm-6 col-xs-12">
+					<div class="col-md-4 col-sm-12">
 						<h4>Other</h4>
 						<ul>
 							<li><a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/ProjectWritingGuidelines.pdf">Project Writing Guidelines</a></li>
@@ -119,13 +119,13 @@
 
 				<div class="row">
 					<h2>Chapter 2</h2>
-					<div class="col-lg-4 col-sm-6 col-xs-12">
+					<div class="col-md-4 col-sm-12">
 						<h4>Handouts</h4>
 					</div>
-					<div class="col-lg-4 col-sm-6 col-xs-12">
+					<div class="col-md-4 col-sm-12">
 						<h4>Homework</h4>
 					</div>
-					<div class="col-lg-4 col-sm-6 col-xs-12">
+					<div class="col-md-4 col-sm-12">
 						<h4>Other</h4>
 					</div>
  				</div>
@@ -133,13 +133,13 @@
 
 				<div class="row">
 					<h2>Chapter 3</h2>
-					<div class="col-lg-4 col-sm-6 col-xs-12">
+					<div class="col-md-4 col-sm-12">
 						<h4>Handouts</h4>
 					</div>
-					<div class="col-lg-4 col-sm-6 col-xs-12">
+					<div class="col-md-4 col-sm-12">
 						<h4>Homework</h4>
 					</div>
-					<div class="col-lg-4 col-sm-6 col-xs-12">
+					<div class="col-md-4 col-sm-12">
 						<h4>Other</h4>
 					</div>
  				</div>
@@ -147,13 +147,13 @@
 
 				<div class="row">
 					<h2>Chapter 4</h2>
-					<div class="col-lg-4 col-sm-6 col-xs-12">
+					<div class="col-md-4 col-sm-12">
 						<h4>Handouts</h4>
 					</div>
-					<div class="col-lg-4 col-sm-6 col-xs-12">
+					<div class="col-md-4 col-sm-12">
 						<h4>Homework</h4>
 					</div>
-					<div class="col-lg-4 col-sm-6 col-xs-12">
+					<div class="col-md-4 col-sm-12">
 						<h4>Other</h4>
 					</div>
  				</div>
@@ -161,13 +161,13 @@
 
 				<div class="row">
 					<h2>Chapter 5</h2>
-					<div class="col-lg-4 col-sm-6 col-xs-12">
+					<div class="col-md-4 col-sm-12">
 						<h4>Handouts</h4>
 					</div>
-					<div class="col-lg-4 col-sm-6 col-xs-12">
+					<div class="col-md-4 col-sm-12">
 						<h4>Homework</h4>
 					</div>
-					<div class="col-lg-4 col-sm-6 col-xs-12">
+					<div class="col-md-4 col-sm-12">
 						<h4>Other</h4>
 					</div>
  				</div>
@@ -175,13 +175,13 @@
 
 				<div class="row">
 					<h2>Chapter 6</h2>
-					<div class="col-lg-4 col-sm-6 col-xs-12">
+					<div class="col-md-4 col-sm-12">
 						<h4>Handouts</h4>
 					</div>
-					<div class="col-lg-4 col-sm-6 col-xs-12">
+					<div class="col-md-4 col-sm-12">
 						<h4>Homework</h4>
 					</div>
-					<div class="col-lg-4 col-sm-6 col-xs-12">
+					<div class="col-md-4 col-sm-12">
 						<h4>Other</h4>
 					</div>
  				</div>
@@ -189,13 +189,13 @@
 
 				<div class="row">
 					<h2>Chapter 7</h2>
-					<div class="col-lg-4 col-sm-6 col-xs-12">
+					<div class="col-md-4 col-sm-12">
 						<h4>Handouts</h4>
 					</div>
-					<div class="col-lg-4 col-sm-6 col-xs-12">
+					<div class="col-md-4 col-sm-12">
 						<h4>Homework</h4>
 					</div>
-					<div class="col-lg-4 col-sm-6 col-xs-12">
+					<div class="col-md-4 col-sm-12">
 						<h4>Other</h4>
 					</div>
  				</div>
