--- a/217-website/Content/index.html
+++ b/217-website/Content/index.html
@@ -99,7 +99,11 @@
 								<br>
 								<a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Proj2/bumpus.csv">Bumpus Data for Project 2</a>
 							</li>
-							<li><strong>Homework 2</strong>: Located in <em>T-test and CIs</em> activity</li>
+							<li>
+								<strong>Homework 2</strong>: Located in <em>T-test and CIs</em> activity
+								<br>
+								<span>(Due Feb 2)</span>
+							</li>
 						</ul>
 					</div>
 					<div class="col-md-4 col-sm-12">
@@ -121,6 +125,10 @@
 					<h2>Chapter 2</h2>
 					<div class="col-md-4 col-sm-12">
 						<h4>Handouts</h4>
+						<ul>
+							<li><a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Ch2/mockjury-coding.pdf">One-Way ANOVA Models for MockJury Data with 3 groups</a> (Jan 28)</li>
+							<li><a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Ch2/insect-sprays-model.pdf">One-Way ANOVA Models for InsectSprays Data</a> (Jan 30)</li>
+						</ul>
 					</div>
 					<div class="col-md-4 col-sm-12">
 						<h4>Homework</h4>
