Add links to One-Way ANOVA activity

--- a/217-website/Content/index.html
+++ b/217-website/Content/index.html
@@ -132,9 +132,26 @@
 					</div>
 					<div class="col-md-4 col-sm-12">
 						<h4>Homework</h4>
+						<ul>							
+							<li>
+								<strong>Homework 3</strong>: Located in <em>One-Way ANOVA</em> activity
+								<br>
+								<span>(Due Feb 6)</span>
+							</li>
+						</ul>
 					</div>
 					<div class="col-md-4 col-sm-12">
 						<h4>Other</h4>
+						<ul>
+							<li><a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/ProjectWritingGuidelines.pdf">Project Writing Guidelines</a></li>
+							<li>
+								<a href="http://kferris10.github.io/Ch2-One-Way-Anova
+
+ ">One-Way ANOVA activity</a>
+ 								<br>
+ 								<a href="https://raw.githubusercontent.com/kferris10/Ch2-One-Way-Anova/gh-pages/act-scores.csv">ACT Data</a> (Optional)
+ 							</li>
+						</ul>
 					</div>
  				</div>
  				<hr>
