Add link for One-Way ANOVA Part 2 activity

--- a/217-website/Content/index.html
+++ b/217-website/Content/index.html
@@ -134,7 +134,7 @@
 						<h4>Homework</h4>
 						<ul>							
 							<li>
-								<strong>Homework 3</strong>: Located in <em>One-Way ANOVA</em> activity
+								<strong>Homework 3</strong>: Located in <em>One-Way ANOVA</em> and <em>One-Way ANOVA Part 2</em>activities
 								<br>
 								<span>(Due Feb 6)</span>
 							</li>
@@ -145,6 +145,13 @@
 						<ul>
 							<li>
 								<a href="http://kferris10.github.io/Ch2-One-Way-Anova
+
+ ">One-Way ANOVA activity</a>
+ 								<br>
+ 								<a href="https://raw.githubusercontent.com/kferris10/Ch2-One-Way-Anova/gh-pages/act.csv">ACT Data</a> (Optional)
+ 							</li>
+							<li>
+								<a href="http://kferris10.github.io/Ch2-One-Way-Anova-p2
 
  ">One-Way ANOVA activity</a>
  								<br>
