--- a/217-website/Content/index.html
+++ b/217-website/Content/index.html
@@ -103,6 +103,8 @@
 								<strong>Homework 2</strong>: Located in <em>T-test and CIs</em> activity
 								<br>
 								<span>(Due Feb 2)</span>
+								<br>
+								<a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Ch2/Homework2-Key.pdf">Key</a>
 							</li>
 						</ul>
 					</div>
@@ -128,6 +130,7 @@
 						<ul>
 							<li><a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Ch2/mockjury-coding.pdf">One-Way ANOVA Models for MockJury Data with 3 groups</a> (Jan 28)</li>
 							<li><a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Ch2/insect-sprays-model.pdf">One-Way ANOVA Models for InsectSprays Data</a> (Jan 30)</li>
+							<li><a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Ch2/ANOVA_demo_bugtraps.pdf">What's under the hood of a One-Way ANOVA?</a> a demo using the Bugs data in the fastR package</li>
 						</ul>
 					</div>
 					<div class="col-md-4 col-sm-12">
@@ -153,7 +156,7 @@
 							<li>
 								<a href="http://kferris10.github.io/Ch2-One-Way-Anova-p2
 
- ">One-Way ANOVA activity</a>
+ ">One-Way ANOVA activity Part 2</a>
  								<br>
  								<a href="https://raw.githubusercontent.com/kferris10/Ch2-One-Way-Anova/gh-pages/act.csv">ACT Data</a> (Optional)
  							</li>
