Add link to Project 3

--- a/217-website/Content/index.html
+++ b/217-website/Content/index.html
@@ -104,7 +104,7 @@
 								<br>
 								<span>(Due Feb 2)</span>
 								<br>
-								<a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Ch2/Homework2-Key.pdf">Key</a>
+								<a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Ch2/Homework2-Key.pdf">Homework 2 Key</a>
 							</li>
 						</ul>
 					</div>
@@ -137,10 +137,11 @@
 						<h4>Homework</h4>
 						<ul>							
 							<li>
-								<strong>Homework 3</strong>: Located in <em>One-Way ANOVA</em> and <em>One-Way ANOVA Part 2</em>activities
+								<strong>Homework 3</strong>: Located in <em>One-Way ANOVA</em> and <em>One-Way ANOVA Part 2</em> activities
 								<br>
 								<span>(Due Feb 6)</span>
 							</li>
+							<li><a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Proj3/Project%203.docx">Project 3</a></li>
 						</ul>
 					</div>
 					<div class="col-md-4 col-sm-12">
