Add links for Feb 9 and some minor updates

--- a/217-website/Content/index.html
+++ b/217-website/Content/index.html
@@ -98,6 +98,8 @@
 								<span>(Due Jan 30)</span>
 								<br>
 								<a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Proj2/bumpus.csv">Bumpus Data for Project 2</a>
+								<br>
+								<a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Proj2/proj2-key.pdf">Project 2 Key</a>
 							</li>
 							<li>
 								<strong>Homework 2</strong>: Located in <em>T-test and CIs</em> activity
@@ -130,7 +132,8 @@
 						<ul>
 							<li><a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Ch2/mockjury-coding.pdf">One-Way ANOVA Models for MockJury Data with 3 groups</a> (Jan 28)</li>
 							<li><a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Ch2/insect-sprays-model.pdf">One-Way ANOVA Models for InsectSprays Data</a> (Jan 30)</li>
-							<li><a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Ch2/ANOVA_demo_bugtraps.pdf">What's under the hood of a One-Way ANOVA?</a> a demo using the Bugs data in the fastR package</li>
+							<li><a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Ch2/ANOVA_demo_bugtraps.pdf">What's under the hood of a One-Way ANOVA?</a> a demo using the Bugs data in the fastR package (Feb 4)</li>
+							<li><a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Ch2/Multiple-Comparisons.pdf">Multiple Comparisons for Bugs data</a> (Feb 9)</li>
 						</ul>
 					</div>
 					<div class="col-md-4 col-sm-12">
@@ -139,7 +142,7 @@
 							<li>
 								<strong>Homework 3</strong>: Located in <em>One-Way ANOVA</em> and <em>One-Way ANOVA Part 2</em> activities
 								<br>
-								<span>(Due Feb 6)</span>
+								<span>(Due Feb 9)</span>
 							</li>
 							<li><a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Proj3/Project%203.docx">Project 3</a></li>
 						</ul>
@@ -161,6 +164,12 @@
  								<br>
  								<a href="https://raw.githubusercontent.com/kferris10/Ch2-One-Way-Anova/gh-pages/act.csv">ACT Data</a> (Optional)
  							</li>
+ 							<li>
+	 							<a href="http://kferris10.github.io/Ch2-Multiple-Comparisons/
+	">Multiple Comparisons Activity</a>
+								<br>
+								<span>No homework for this one.</span>
+							</li>
 						</ul>
 					</div>
  				</div>
