Add link to Two-Way ANOVA ToothGrowth data handout

--- a/217-website/Content/index.html
+++ b/217-website/Content/index.html
@@ -179,6 +179,9 @@
 					<h2>Chapter 3</h2>
 					<div class="col-md-4 col-sm-12">
 						<h4>Handouts</h4>
+						<ul>
+							<li><a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Ch3/tooth-growth-demo.pdf">Two-Way ANOVA Model with ToothGrowth data</a> (Feb 11)</li>
+						</ul>
 					</div>
 					<div class="col-md-4 col-sm-12">
 						<h4>Homework</h4>
