Add link for handout on 2/13

--- a/217-website/Content/index.html
+++ b/217-website/Content/index.html
@@ -143,6 +143,8 @@
 								<strong>Homework 3</strong>: Located in <em>One-Way ANOVA</em> and <em>One-Way ANOVA Part 2</em> activities
 								<br>
 								<span>(Due Feb 9)</span>
+								<br>
+								<a href="">Key</a>
 							</li>
 							<li><a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Proj3/Project%203.docx">Project 3</a></li>
 						</ul>
@@ -181,6 +183,7 @@
 						<h4>Handouts</h4>
 						<ul>
 							<li><a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Ch3/tooth-growth-demo.pdf">Two-Way ANOVA Model with ToothGrowth data</a> (Feb 11)</li>
+							<li><a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Ch3/toothgrowth-interaction.pdf">Testing for an Interaction in ToothGrowth Data</a> (Feb 13)</li>
 						</ul>
 					</div>
 					<div class="col-md-4 col-sm-12">
