Add links for 2/18

--- a/217-website/Content/index.html
+++ b/217-website/Content/index.html
@@ -186,14 +186,27 @@
 						<ul>
 							<li><a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Ch3/tooth-growth-demo.pdf">Two-Way ANOVA Model with ToothGrowth data</a> (Feb 11)</li>
 							<li><a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Ch3/toothgrowth-interaction.pdf">Testing for an Interaction in ToothGrowth Data</a> (Feb 13)</li>
+							<li><a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Ch3/two-way-anova-general-steps.pdf">General Steps for a Two-Way ANOVA</a> (Feb 18)</li>
+							<li><a href="">TWA Interaction and Additive Model Example with Debt Data</a> (Feb 18)</li>
 						</ul>
 					</div>
 					<div class="col-md-4 col-sm-12">
 						<h4>Homework</h4>
+						<ul>
+							<li><a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Ch3/homework4-217.pdf">Homework 4</a> (Due Feb 25)</li>
+						</ul>
 					</div>
 					<div class="col-md-4 col-sm-12">
 						<h4>Other</h4>
+						<ul>
+							<li><a href="http://chessa015.github.io/Ch3_TwoWayANOVA">Last Year's Two Way ANOVA Activity</a> (Optional)</li>
+						</ul>
 					</div>
+ 				</div>
+ 				<hr>
+
+ 				<div class="row">
+ 					<h2>Exam 1</h2>
  				</div>
  				<hr>
 
